hphp/hack/test/typecheck/function_pointer/class_const_visibility.php.rust_elab.exp
File "class_const_visibility.php", line 7, characters 10-13:
Cannot use `self::` in a function pointer in a non-final class due to class context ambiguity. Consider using `Foo::bar` instead (Naming[2113])
