hphp/hack/test/typecheck/function_pointer/class_const_visibility.php
<?hh

final class Foo {
  private static function bar(int $x): void {}

  public function baz(): void {
    $x = self::bar<>;
    $x(4);
  }
}
